--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,15 +10,9 @@ website:
         text: Home
       - href: projects.qmd
         text: SURF
-    tools:
-      - icon: github
-        href: https://github.com/hemu0626
-  page-footer:
-    right: "&copy, Copyright 2024, Mu He"
-    
+      - href: onelayernn.qmd
+        text: try
 format: 
   html: 
     theme: cerulean
     toc: true
-
-editor: source
