--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,15 +3,17 @@ project:
   output-dir: docs
   
 website: 
-  title: "Survival Analysis SURF 2024"
+  title: "SURF 2024"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - href: projects.qmd
-        text: SURF
+        text: SURF Intro
+      - href: basics.qmd
+        text: Basics
       - href: onelayernn.qmd
-        text: try
+        text: Machine Learning Methods 
 format: 
   html: 
     theme: cosmo
